--- a/src/main/webapp/css/register.css
+++ b/src/main/webapp/css/register.css
@@ -1,66 +1,85 @@
-@CHARSET "UTF-8";
+@charset "UTF-8";
+
 .box {
-    position:relative;
-    line-height:160%;
-    margin:6px;
-}
-.i-label{
-    position:absolute;
-    left:0px;
-    width:90px;
-    line-height:160%;
-    text-align:right;
-}
-.i-text{
-    position:relative;
-    left:95px;
-    width:200px;
-    line-height:160%;
-}
-.i-select{
-    position:relative;
-    left:95px;
-    width:100px;
-    line-height:160%;
-}
-.banner{
-    position:relative;
-    background:url(../images/theme-pic.jpg) no-repeat 0 200px;
-    margin:0 auto;
-    width:1000px;
-    height:678px;
-}
-.aside{
-    position:absolute;
-    left:60%;
-    top:120px;
-    width:400px;
-    padding:20px;
-    background:rgb(252, 252, 252);
-    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
-    border-radius:8px;
+    position: relative;
+    line-height: 160%;
+    margin: 6px;
 }
 
-.import_prompt{
-    border:solid 1px #ffcd00;
-    background-color:#ffffda;
-    padding-left:5px;
-    padding-right:5px;
-    line-height:20px;
-}
-.error_prompt{
-    border:solid 1px #ff3300;
-    background-color:#fff2e5;
-    background-image:url(../li_err.gif);
-    background-repeat:no-repeat;
-    background-position:5px 2px;
-    padding:2px 5px 0px 25px;
-    line-height:20px;
-}
-.ok_prompt{
-    display:none;
+.i-label {
+    position: absolute;
+    left: 0;
+    width: 90px;
+    line-height: 160%;
+    text-align: right;
 }
 
-body{
-    background:rgb(242, 242, 242);
+.i-text {
+    position: relative;
+    left: 95px;
+    width: 200px;
+    line-height: 160%;
+}
+
+.i-select {
+    position: relative;
+    left: 95px;
+    width: 100px;
+    line-height: 160%;
+}
+
+/* 子绝父相 */
+.banner {
+    position: relative;
+    background: url(../images/theme-pic.jpg) no-repeat 0 200px;
+    margin: 0 auto;
+    width: 1000px;
+    height: 678px;
+}
+
+.aside {
+    position: absolute;
+    left: 60%;
+    top: 120px;
+    width: 400px;
+    padding: 20px;
+    background: rgb(252, 252, 252);
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+}
+
+body {
+    background: rgb(242, 242, 242);
+}
+
+.import_prompt {
+    border: solid 1px #ffcd00;
+    background-color: #ffffda;
+    padding-left: 5px;
+    padding-right: 5px;
+    line-height: 20px;
+}
+
+.error_prompt {
+    border: solid 1px #f30;
+    background-color: #fff2e5;
+    background-image: url(../images/li_err.gif);
+    background-repeat: no-repeat;
+    background-position: 5px 2px;
+    padding: 2px 5px 0px 25px;
+    line-height: 20px;
+}
+
+.ok_prompt {
+    border: solid 1px #ffcd00;
+    background-color: #fff2e5;
+    background-image: url(../images/li_ok.gif);
+    background-repeat: no-repeat;
+    background-position: 5px 2px;
+    padding: 2px 5px 0 25px;
+    line-height: 20px;
+}
+
+.disappear {
+    display: none;
 }
